
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ kern_return_t ;
typedef scalar_t__ io_service_t ;
typedef int io_iterator_t ;
typedef int io_connect_t ;
typedef int CFMutableDictionaryRef ;


 scalar_t__ IOIteratorNext (int ) ;
 scalar_t__ IOServiceGetMatchingServices (int ,int ,int *) ;
 int IOServiceMatching (char*) ;
 scalar_t__ IOServiceOpen (scalar_t__,int ,int ,int*) ;
 scalar_t__ IO_OBJECT_NULL ;
 scalar_t__ KERN_SUCCESS ;
 int MACH_PORT_NULL ;
 int kIOMasterPortDefault ;
 int mach_task_self () ;
 int printf (char*,...) ;

io_connect_t get_some_client() {
  kern_return_t err;

  CFMutableDictionaryRef matching = IOServiceMatching("AppleRTC");
  if(!matching){
    printf("unable to create service matching dictionary\n");
    return 0;
  }

  io_iterator_t iterator;
  err = IOServiceGetMatchingServices(kIOMasterPortDefault, matching, &iterator);
  if (err != KERN_SUCCESS){
    printf("no matches\n");
    return 0;
  }

  io_service_t service = IOIteratorNext(iterator);

  if (service == IO_OBJECT_NULL){
    printf("unable to find service\n");
    return 0;
  }
  printf("got service: %x\n", service);

  io_connect_t conn = MACH_PORT_NULL;
  err = IOServiceOpen(service, mach_task_self(), 0, &conn);
  if (err != KERN_SUCCESS){
    printf("unable to get user client connection\n");
    return 0;
  }else{
    printf("got userclient connection: %x, type:%d\n", conn, 0);
  }

  printf("got userclient connection: %x\n", conn);
  return conn;
}
